--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "dotenv": "^16.4.5",
     "hardhat": "^2.22.4",
     "hardhat-deploy": "^0.12.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2"
   }
 }
