--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "hardhat-deploy": "^0.12.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2",
-    "@openzeppelin/contracts-upgradeable": "^5.0.2"
+    "@openzeppelin/contracts": "4.7.3",
+    "@openzeppelin/contracts-upgradeable": "4.7.3"
   }
 }
